--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,4 +25,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.ProseMirror p.is-editor-empty:first-child::before {
+  color: #9ca3af; /* Tailwind gray-400 */
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
 
